--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -5,5 +5,5 @@ psycopg2-binary==2.9.11
 python-jose==3.5.0
 passlib==1.7.4
 prometheus-client==0.23.1
-pydantic==2.12.3
+pydantic[email]==2.12.3
 starlette==0.48.0
