--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres:
     image: postgres:16
@@ -14,7 +12,7 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 5s
+      interval: 2s
       timeout: 5s
       retries: 10
 
@@ -24,7 +22,8 @@ services:
     environment:
       DATABASE_URL: ${BASE_DB_URL}?options=-csearch_path=${USERS_SCHEMA}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8001:8000"
 
@@ -34,7 +33,8 @@ services:
     environment:
       DATABASE_URL: ${BASE_DB_URL}?options=-csearch_path=${CATALOG_SCHEMA}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8002:8000"
 
@@ -44,7 +44,8 @@ services:
     environment:
       DATABASE_URL: ${BASE_DB_URL}?options=-csearch_path=${ORDERS_SCHEMA}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8003:8000"
 
@@ -54,7 +55,8 @@ services:
     environment:
       DATABASE_URL: ${BASE_DB_URL}?options=-csearch_path=${PRODUCTION_SCHEMA}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8004:8000"
 
@@ -64,7 +66,8 @@ services:
     environment:
       DATABASE_URL: ${BASE_DB_URL}?options=-csearch_path=${LOGISTICS_SCHEMA}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8005:8000"
 
