turn off load balancer for services

--- a/deploy/charts/production/templates/deployment.yaml
+++ b/deploy/charts/production/templates/deployment.yaml
@@ -34,7 +34,7 @@ kind: Service
 metadata:
   name: production
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: production
   ports:
